# web-testing-agent

./: .env.example  .gitignore  LICENSE  README.cn.md  README.en.md  README.md  agent.py  artifacts.py  browser_tools.py  config.py  main.py  output.py  prompts.py  pyproject.toml  run_context.py  runner.py  scenarios.json  test4ob.md  webapp.py
docs/: four-service-migration-plan.md  session-persistence-plan.md
scenarios/: default.json
skills/e2e-test/: SKILL.md
skills/playwright-cli/: SKILL.md
skills/playwright-cli/references/: video-recording.md
src/webtestagent/: __init__.py
src/webtestagent/cli/: main.py
src/webtestagent/config/: scenarios.py  settings.py
src/webtestagent/core/: agent_builder.py  artifacts.py  playwright_trace_policy.py  playwright_trace_recorder.py  run_context.py  runner.py  session.py  tracing_backend.py
src/webtestagent/middleware/: message_normalizer.py
src/webtestagent/output/: formatters.py  stream.py
src/webtestagent/prompts/: system.py  user.py
src/webtestagent/tools/: browser_tools.py
src/webtestagent/web/: api.py  app.py  app_legacy.py  dependencies.py  middleware.py  schemas.py  state.py
src/webtestagent/web/routers/: runs.py  ws.py
src/webtestagent/web/services/: run_store.py
src/webtestagent/web/static/: index.html
tests/: test_agent_builder.py  test_api.py  test_artifacts.py  test_browser_tools.py  test_cli.py  test_e2e.py  test_message_normalizer.py  test_output.py  test_playwright_trace_policy.py  test_playwright_trace_recorder.py  test_prompts.py  test_run_context.py  test_runner.py  test_scenarios.py  test_session.py  test_settings.py  test_tracing_backend.py  test_web_app.py  test_web_static_index.py
web/: index.html
