[project]
name = "web-test-agent"
version = "0.1.0"
description = "AI-powered Web Automation Testing Agent System"
requires-python = ">=3.11,<4.0"
dependencies = [
  "deepagents>=0.5,<0.6",
  "langchain-openai>=1.0,<2.0",
  "langgraph>=1.0,<2.0",
  "python-dotenv>=1.0,<2.0",
]

[project.scripts]
webtestagent = "webtestagent.cli.main:main"
webtestagent-web = "webtestagent.web.app:serve"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webtestagent"]

[tool.uv]
package = true
